--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -74,6 +74,7 @@
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
+				Profile="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -157,6 +158,7 @@
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
+				Profile="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
