[+] added: !pycmd command for windbg extension
git-svn-id: https://pykd.svn.codeplex.com/svn@53591 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -446,6 +446,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\dbgcallback.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.h"
 				>
 			</File>
