[+] added: dbgExtensionClass class for calling windbg extension command from python script
git-svn-id: https://pykd.svn.codeplex.com/svn@53831 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -388,6 +388,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgstack.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgsym.cpp"
 				>
 			</File>
@@ -483,6 +487,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgsession.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgstack.h"
 				>
 			</File>
 			<File
