[+] added: !pythonpath windbg command - print enviroment var $pythonpath [+] added: !py windbg command uses $pythonpath var for search scripts
git-svn-id: https://pykd.svn.codeplex.com/svn@56329 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -376,6 +376,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgpath.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgprint.cpp"
 				>
 			</File>
@@ -475,6 +479,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgmodule.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgpath.h"
 				>
 			</File>
 			<File
