--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -474,6 +474,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbginput.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgmem.h"
 				>
 			</File>
