[+] added: getThreadList routine; returns thread object's ptr list
git-svn-id: https://pykd.svn.codeplex.com/svn@58073 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -384,6 +384,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgprocess.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgreg.cpp"
 				>
 			</File>
@@ -491,6 +495,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgprint.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgprocess.h"
 				>
 			</File>
 			<File
