[!] fixed : issue #6782 ( typedVar works very slowly )
git-svn-id: https://pykd.svn.codeplex.com/svn@59199 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -132,6 +132,7 @@
 				GeneratePreprocessedFile="0"
 				KeepComments="false"
 				MinimalRebuild="true"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
