--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="pykd"
 	ProjectGUID="{C0A12E93-4B76-4B17-B837-37020F957AD2}"
 	RootNamespace="pykd"
@@ -365,6 +365,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgeventcb.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgext.cpp"
 				>
 			</File>
@@ -398,6 +402,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgsym.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgsynsym.cpp"
 				>
 			</File>
 			<File
@@ -467,6 +475,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgeventcb.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgexcept.h"
 				>
 			</File>
@@ -511,6 +523,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgsynsym.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgsystem.h"
 				>
 			</File>
@@ -537,10 +553,6 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath=".\ReadMe.txt"
-			>
-		</File>
 	</Files>
 	<Globals>
 	</Globals>
