[pykd] fixed: issue 8470 ( python.exe crashes after first pykd call )
git-svn-id: https://pykd.svn.codeplex.com/svn@63970 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -463,6 +463,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgclient.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.h"
 				>
 			</File>
@@ -508,10 +512,6 @@
 			</File>
 			<File
 				RelativePath=".\dbgreg.h"
-				>
-			</File>
-			<File
-				RelativePath=".\dbgsession.h"
 				>
 			</File>
 			<File
