[+] added dbgclient.h [-] removed dbgsession.h
git-svn-id: https://pykd.svn.codeplex.com/svn@63975 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -452,6 +452,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgclient.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.h"
 				>
 			</File>
@@ -497,10 +501,6 @@
 			</File>
 			<File
 				RelativePath=".\dbgreg.h"
-				>
-			</File>
-			<File
-				RelativePath=".\dbgsession.h"
 				>
 			</File>
 			<File
