[+] add callback for load/unload modules
git-svn-id: https://pykd.svn.codeplex.com/svn@65709 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -376,6 +376,10 @@
 				RelativePath=".\dbgmem.cpp"
 				>
 			</File>
+  		<File
+				RelativePath=".\dbgmodevent.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\dbgmodule.cpp"
 				>
@@ -492,6 +496,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgmem.h"
+				>
+			</File>
+  		<File
+				RelativePath=".\dbgmodevent.h"
 				>
 			</File>
 			<File
