--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -357,6 +357,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\dbgbreak.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.cpp"
 				>
 			</File>
@@ -366,6 +370,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgeventcb.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgexcept.cpp"
 				>
 			</File>
 			<File
@@ -462,6 +470,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\dbgbreak.h"
+				>
+			</File>
 			<File
 				RelativePath=".\dbgcallback.h"
 				>
