[~] add files to vcproj for 2008
git-svn-id: https://pykd.svn.codeplex.com/svn@65725 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -346,6 +346,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\dbgbreak.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.cpp"
 				>
 			</File>
@@ -355,6 +359,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgeventcb.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgexcept.cpp"
 				>
 			</File>
 			<File
@@ -451,6 +459,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\dbgbreak.h"
+				>
+			</File>
 			<File
 				RelativePath=".\dbgcallback.h"
 				>
