[~] moduleEvents renamed to debugEvent. now it is base class of all debug events
git-svn-id: https://pykd.svn.codeplex.com/svn@65734 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -385,7 +385,7 @@
 				>
 			</File>
   		<File
-				RelativePath=".\dbgmodevent.cpp"
+				RelativePath=".\dbgevent.cpp"
 				>
 			</File>
 			<File
@@ -511,7 +511,7 @@
 				>
 			</File>
   		<File
-				RelativePath=".\dbgmodevent.h"
+				RelativePath=".\dbgevent.h"
 				>
 			</File>
 			<File
