--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="pykd"
 	ProjectGUID="{FE961905-666F-4908-A212-961465F46F13}"
 	RootNamespace="pykd"
@@ -99,6 +99,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(SolutionDir)test\scripts\_run_pykdtest.cmd&quot; &quot;$(TargetDir)targetapp.exe&quot; $(PlatformName)"
 			/>
 		</Configuration>
 		<Configuration
@@ -179,6 +180,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(SolutionDir)test\scripts\_run_pykdtest.cmd&quot; &quot;$(TargetDir)targetapp.exe&quot; $(PlatformName)"
 			/>
 		</Configuration>
 		<Configuration
@@ -256,6 +258,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(SolutionDir)test\scripts\_run_pykdtest.cmd&quot; &quot;$(TargetDir)targetapp.exe&quot; $(PlatformName)"
 			/>
 		</Configuration>
 		<Configuration
@@ -334,6 +337,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(SolutionDir)test\scripts\_run_pykdtest.cmd&quot; &quot;$(TargetDir)targetapp.exe&quot; $(PlatformName)"
 			/>
 		</Configuration>
 	</Configurations>
