--- a/pykd/pykd.vcproj
+++ b/pykd/pykd.vcproj
@@ -425,6 +425,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\disasm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\pykd.def"
 				>
 			</File>
@@ -548,6 +552,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgtype.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm.h"
 				>
 			</File>
 			<File
