[+] dia get type [+] dia get location [+] dia print to string
git-svn-id: https://pykd.svn.codeplex.com/svn@69841 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -439,6 +439,10 @@
 				RelativePath=".\stdafx.h"
 				>
 			</File>
+			<File
+				RelativePath=".\utils.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
