[0.1.x] updated : Module class ( Class representing executable module )
git-svn-id: https://pykd.svn.codeplex.com/svn@69930 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -362,6 +362,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgmem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\diawrapper.cpp"
 				>
 			</File>
@@ -421,6 +425,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgexcept.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgmem.h"
 				>
 			</File>
 			<File
