[+] pyDia: findByRva for global scope
git-svn-id: https://pykd.svn.codeplex.com/svn@69976 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -370,6 +370,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\diaprint.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\diawrapper.cpp"
 				>
 			</File>
