--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -452,6 +452,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\intbase.h"
+				>
+			</File>
+			<File
 				RelativePath=".\module.h"
 				>
 			</File>
