[0.1.x] added : typeInfo class based at DIA
git-svn-id: https://pykd.svn.codeplex.com/svn@70175 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -468,6 +468,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\typeinfo.h"
+				>
+			</File>
+			<File
 				RelativePath=".\utils.h"
 				>
 			</File>
