[0.1.x] added : print, eprint, dprintln, eprintln
git-svn-id: https://pykd.svn.codeplex.com/svn@70179 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -362,6 +362,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgio.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgmem.cpp"
 				>
 			</File>
@@ -436,6 +440,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgio.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgmem.h"
 				>
 			</File>
@@ -473,6 +481,10 @@
 			</File>
 			<File
 				RelativePath=".\utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\windbg.h"
 				>
 			</File>
 		</Filter>
