[0.1.x] added : !py implementation
git-svn-id: https://pykd.svn.codeplex.com/svn@70240 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -370,6 +370,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgpath.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\diadata.cpp"
 				>
 			</File>
@@ -449,6 +453,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgobj.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgpath.h"
 				>
 			</File>
 			<File
