[0.1.x] added : dbgCommand routine
git-svn-id: https://pykd.svn.codeplex.com/svn@70294 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -354,6 +354,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgcmd.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgexcept.cpp"
 				>
 			</File>
@@ -437,6 +441,10 @@
 			>
 			<File
 				RelativePath=".\dbgclient.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgcmd.h"
 				>
 			</File>
 			<File
