[0.1.x] added : getDebuggeeType routine ( Return type of the debuggee )
git-svn-id: https://pykd.svn.codeplex.com/svn@70309 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/test/targetapp/targetapp.vcproj
+++ b/test/targetapp/targetapp.vcproj
@@ -405,6 +405,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\scripts\clienttest.py"
+				>
+			</File>
+			<File
 				RelativePath="..\scripts\dbgcmd.py"
 				>
 			</File>
