[0.1.x] added : eventHandler class
git-svn-id: https://pykd.svn.codeplex.com/svn@70386 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -358,6 +358,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgevent.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgexcept.cpp"
 				>
 			</File>
@@ -445,6 +449,10 @@
 			</File>
 			<File
 				RelativePath=".\dbgcmd.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dbgevent.h"
 				>
 			</File>
 			<File
