--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -496,6 +496,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\pyaux.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
