--- a/test/targetapp/targetapp.vcproj
+++ b/test/targetapp/targetapp.vcproj
@@ -421,6 +421,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\scripts\memtest.py"
+				>
+			</File>
+			<File
 				RelativePath="..\scripts\moduletest.py"
 				>
 			</File>
