[0.1.x] added : disasm class
git-svn-id: https://pykd.svn.codeplex.com/svn@70760 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -394,6 +394,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\disasm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.cpp"
 				>
 			</File>
@@ -485,6 +489,10 @@
 			</File>
 			<File
 				RelativePath=".\diawrapper.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm.h"
 				>
 			</File>
 			<File
