[0.1.x] added : typedVar class
git-svn-id: https://pykd.svn.codeplex.com/svn@70920 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -442,6 +442,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\typedvar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\typeinfo.cpp"
 				>
 			</File>
