--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -350,6 +350,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\cpureg.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgclient.cpp"
 				>
 			</File>
@@ -455,6 +459,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\cpureg.h"
+				>
+			</File>
 			<File
 				RelativePath=".\dbgclient.h"
 				>
