[0.1.x] added : getCurrentProcess routine [0.1.x] added : getImplicitThread routine
git-svn-id: https://pykd.svn.codeplex.com/svn@72141 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="pykd"
 	ProjectGUID="{FE961905-666F-4908-A212-961465F46F13}"
 	RootNamespace="pykd"
@@ -410,6 +410,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\process.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\pykd.def"
 				>
 			</File>
@@ -529,6 +533,10 @@
 			</File>
 			<File
 				RelativePath=".\module.h"
+				>
+			</File>
+			<File
+				RelativePath=".\process.h"
 				>
 			</File>
 			<File
