--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="pykd"
 	ProjectGUID="{FE961905-666F-4908-A212-961465F46F13}"
 	RootNamespace="pykd"
@@ -350,6 +350,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\context.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpureg.cpp"
 				>
 			</File>
@@ -476,6 +480,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\context.h"
+				>
+			</File>
+			<File
 				RelativePath=".\cpureg.h"
 				>
 			</File>
@@ -509,6 +517,14 @@
 			</File>
 			<File
 				RelativePath=".\dbgpath.h"
+				>
+			</File>
+			<File
+				RelativePath=".\defctxamd64.h"
+				>
+			</File>
+			<File
+				RelativePath=".\defctxi386.h"
 				>
 			</File>
 			<File
