[0.1.x]  + get local variables dict {name: typedVar, ....}  ~ DiaSymbol::findEx add default params  ~ re-query pdb-file name for module  + dataKind for typedVar
git-svn-id: https://pykd.svn.codeplex.com/svn@73103 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -410,6 +410,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\livevar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.cpp"
 				>
 			</File>
