--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -564,6 +564,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\pykdver.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
