--- a/pykd/pykd.rc
+++ b/pykd/pykd.rc
@@ -54,8 +54,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,1,0,5
- PRODUCTVERSION 0,1,0,5
+ FILEVERSION PYKD_VERSION_BUILD
+ PRODUCTVERSION PYKD_VERSION_BUILD
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -71,11 +71,11 @@ BEGIN
         BLOCK "041904b0"
         BEGIN
             VALUE "FileDescription", "pykd - python extension for windbg"
-            VALUE "FileVersion", PYKD_VERSION_BUILD
+            VALUE "FileVersion", PYKD_VERSION_BUILD_STR
             VALUE "InternalName", "pykd"
             VALUE "OriginalFilename", "pykd.dll"
             VALUE "ProductName", "pykd  - python extension for windbg"
-            VALUE "ProductVersion", PYKD_VERSION_BUILD
+            VALUE "ProductVersion", PYKD_VERSION_BUILD_STR
         END
     END
     BLOCK "VarFileInfo"
