[0.1.x]  + exception/breakpoint handling test for separate client  + eventHandler catch python exception
git-svn-id: https://pykd.svn.codeplex.com/svn@73527 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/test/targetapp/targetapp.vcproj
+++ b/test/targetapp/targetapp.vcproj
@@ -417,6 +417,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\scripts\ehexcepttest.py"
+				>
+			</File>
+			<File
 				RelativePath="..\scripts\ehloadtest.py"
 				>
 			</File>
