[0.1.x]  ~ bind stack frame to debug client  + get local vars from stack frame
git-svn-id: https://pykd.svn.codeplex.com/svn@73631 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -466,6 +466,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\stkframe.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\synsymbol.cpp"
 				>
 			</File>
@@ -581,6 +585,10 @@
 			</File>
 			<File
 				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\stkframe.h"
 				>
 			</File>
 			<File
