[0.1.x] + DIA: load symbols for executable file
git-svn-id: https://pykd.svn.codeplex.com/svn@74746 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -544,6 +544,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\diacallback.h"
+				>
+			</File>
+			<File
 				RelativePath=".\diaregs.h"
 				>
 			</File>
