--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -485,6 +485,10 @@
 				RelativePath=".\typeinfo.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\vardata.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -613,6 +617,10 @@
 			</File>
 			<File
 				RelativePath=".\utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\vardata.h"
 				>
 			</File>
 			<File
