[0.1.x]  ~ split py-init and dbg-ext-init  ~ DebugClient py-init moved to in a separate module (C1128)
git-svn-id: https://pykd.svn.codeplex.com/svn@75079 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -366,6 +366,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dbgclientpyinit.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\dbgcmd.cpp"
 				>
 			</File>
@@ -427,6 +431,10 @@
 			</File>
 			<File
 				RelativePath=".\pykd.def"
+				>
+			</File>
+			<File
+				RelativePath=".\pymod.cpp"
 				>
 			</File>
 			<File
