[0.1.x] ~field offset moved to parent TypeInfo (method fieldOffset)
git-svn-id: https://pykd.svn.codeplex.com/svn@78192 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -494,6 +494,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\udtutils.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\vardata.cpp"
 				>
 			</File>
@@ -613,6 +617,10 @@
 			</File>
 			<File
 				RelativePath=".\typeinfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\udtutils.h"
 				>
 			</File>
 			<File
