--- a/test/targetapp/targetapp.vcproj
+++ b/test/targetapp/targetapp.vcproj
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="targetapp"
 	ProjectGUID="{C6254E16-AB8E-41EE-887D-31458E93FC68}"
 	RootNamespace="targetapp"
-	SccProjectName="$/pykd/branch/0.1.x/test/targetapp"
-	SccAuxPath="https://tfs.codeplex.com/tfs/TFS08"
-	SccLocalPath="."
-	SccProvider="{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -458,6 +454,10 @@
 			</File>
 			<File
 				RelativePath="..\scripts\target.py"
+				>
+			</File>
+			<File
+				RelativePath="..\scripts\testutils.py"
 				>
 			</File>
 			<File
